# NanoCodeAgent

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.agent/skills/: git_commit_rules.md
.agents/skills/doc-clarity-reviewer/: SKILL.md
.agents/skills/docgen-change-impact/: SKILL.md
.agents/skills/docgen-fact-check/: SKILL.md
.agents/skills/docgen-overview-writer/: SKILL.md
.agents/skills/docgen-readme-patch/: SKILL.md
.agents/skills/docgen-repo-understanding/: SKILL.md
.agents/skills/docgen-reviewer/: SKILL.md
.agents/skills/docgen-tutorial-update/: SKILL.md
.github/instructions/: cpp_engineering_rules.instructions.md  git_commit_rules.instructions.md
.github/workflows/: docs-validate.yml
book/: book.toml
book/src/: 01-overview.md  02-cli-config-workspace.md  03-http-llm-streaming.md  04-tools-and-safety.md  05-testing.md  99-changelog.md  SUMMARY.md
include/: agent_loop.hpp  cli.hpp  config.hpp  harness.hpp  llm.hpp  mcp.hpp  mcp_transport.hpp  read_file.hpp  skill_loader.hpp  state.hpp  state_store.hpp  subprocess.hpp  tool_registry.hpp  trace.hpp  workspace.hpp
scripts/docs/: validate_docs.py
src/: agent_loop.cpp  agent_tools.cpp  bash_tool.cpp  cli.cpp  config.cpp  harness.cpp  harness_runner_main.cpp  harness_scenarios.cpp  llm.cpp  main.cpp  mcp.cpp  mcp_tool_bridge.cpp  mcp_transport_stdio.cpp  read_file.cpp  repo_tools.cpp  skill_loader.cpp  state.cpp  state_store.cpp  subprocess.cpp  tool_registry.cpp  trace.cpp  workspace.cpp
tests/: CMakeLists.txt  net_smoke_artifacts.cpp  net_smoke_artifacts.hpp  test_agent_loop_limits.cpp  test_agent_mock_e2e.cpp  test_bash_tool.cpp  test_build_test_tools.cpp  test_cli.cpp  test_config_precedence.cpp  test_detail_mode.cpp  test_harness_runner.cpp  test_llm_stream.cpp  test_mcp_integration.cpp  test_mcp_transport.cpp  test_net_smoke.cpp  test_net_smoke_artifacts.cpp  test_planner_repair_prompt.cpp  test_planning_runtime.cpp  test_read_file.cpp  test_repo_tools.cpp  test_schema_and_args_tolerance.cpp  test_skill_loader.cpp  test_state.cpp  test_state_integration.cpp  test_state_store.cpp  test_tool_registry.cpp  test_workspace.cpp
tests/fixtures/: planner_contract_repair_then_execute.json
tests/testdata/: fake_mcp_server.py
